--- a/SCDC/Base.lproj/Main_iPhone.storyboard
+++ b/SCDC/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="RIU-xl-rhC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="RIU-xl-rhC">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -61,7 +61,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cwX-Bz-lgp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="546" y="17"/>
+            <point key="canvasLocation" x="1072" y="17"/>
         </scene>
         <!--Pass Code View Controller - Pass Code Check-->
         <scene sceneID="b7o-9B-bAG">
@@ -93,13 +93,18 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Pass Code Check" id="wct-Rw-tAz">
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="mZN-cG-5Ct"/>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="mZN-cG-5Ct">
+                            <connections>
+                                <segue destination="kfr-bF-9Dq" kind="unwind" unwindAction="unwindMainMenu:" id="rhG-ZI-41o"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="dCo-yH-70A"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RcG-6f-kZc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="kfr-bF-9Dq" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-5" y="-863"/>
+            <point key="canvasLocation" x="901" y="-621"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="YZK-on-5sg">
@@ -130,7 +135,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="W7R-69-7mk" kind="push" id="Ln5-gK-5rY"/>
+                                    <segue destination="q1d-Cy-OHj" kind="push" id="Ln5-gK-5rY"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -174,6 +179,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nvT-58-fFs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-497" y="17"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DBl-la-SDQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="q1d-Cy-OHj" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="MzR-ES-eau"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oJI-jU-1GM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="W7R-69-7mk" kind="relationship" relationship="rootViewController" id="wIm-Ij-hgX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RIE-iu-Z2e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="375" y="-621"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
