Fixed pointer errors + ClassesViewController now works with the database.

--- a/SCDC/Base.lproj/Main_iPhone.storyboard
+++ b/SCDC/Base.lproj/Main_iPhone.storyboard
@@ -406,7 +406,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="jdi-DC-U69"/>
+        <segue reference="gdu-LV-txU"/>
         <segue reference="ZXC-Jk-E1f"/>
     </inferredMetricsTieBreakers>
 </document>
